objects/LLC_BI__Document_Placeholder__c.object
<CustomObject>
    <description>This object stores information associated to the placeholders for documents in the Global Document Manager.</description>
    <fields>
        <fullName>CF_Category__c</fullName>
        <description>It contains the name of the category</description>
        <formula>LLC_BI__DocType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Document_Date__c</fullName>
        <description>It will store the date at which document is uploaded</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Exception_Tracking_Status__c</fullName>
        <label>Exception Tracking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trailing Document</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Compliance to Review</fullName>
                </value>
                <value>
                    <fullName>Compliance Approved</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Corrected Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Date Required</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Expired Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Missing Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Notary Required</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Officer Comments</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Original Document</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Release Required</fullName>
                </value>
                <value>
                    <fullName>Compliance Exception - Signature Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Name__c</fullName>
        <description>It stores name of the document</description>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EtranDocErrorMessage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SBA Error Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EtranDocStatus__c</fullName>
        <label>SBA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for eTran</fullName>
                </value>
                <value>
                    <fullName>Sent to eTran</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EtranDocumentTypeCode__c</fullName>
        <label>SBA Document Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>590</fullName>
                    <label>Signed SBA Form 912</label>
                </value>
                <value>
                    <fullName>700</fullName>
                    <label>T1 - SBA Form 1919 - Borrower&apos;s Information</label>
                </value>
                <value>
                    <fullName>702</fullName>
                    <label>T1 - SBA Form 1920 - Lender&apos;s Application</label>
                </value>
                <value>
                    <fullName>725</fullName>
                    <label>T2 – Lender’s Credit Memo</label>
                </value>
                <value>
                    <fullName>727</fullName>
                    <label>T2 - Debt Schedule documents</label>
                </value>
                <value>
                    <fullName>728</fullName>
                    <label>T2 - Schedule of Collateral</label>
                </value>
                <value>
                    <fullName>750</fullName>
                    <label>T3 - Loan Authorization</label>
                </value>
                <value>
                    <fullName>776</fullName>
                    <label>T4 - SBA Form 413 - Personal Financial Statements</label>
                </value>
                <value>
                    <fullName>778</fullName>
                    <label>T4 - Credit Bureau Report</label>
                </value>
                <value>
                    <fullName>783</fullName>
                    <label>T4 - SBA Form 912 - Statement of Personal History</label>
                </value>
                <value>
                    <fullName>800</fullName>
                    <label>T5 - Business Valuation</label>
                </value>
                <value>
                    <fullName>802</fullName>
                    <label>T5 - Refi Transcript of Account</label>
                </value>
                <value>
                    <fullName>803</fullName>
                    <label>T5 - List of all M being Purchased</label>
                </value>
                <value>
                    <fullName>806</fullName>
                    <label>T5 - Copies of Notes to be Refinanced</label>
                </value>
                <value>
                    <fullName>825</fullName>
                    <label>T6 - Current A/R and A/P</label>
                </value>
                <value>
                    <fullName>826</fullName>
                    <label>T6 - Business Financials</label>
                </value>
                <value>
                    <fullName>831</fullName>
                    <label>T6 - Business Forecast</label>
                </value>
                <value>
                    <fullName>852</fullName>
                    <label>T7 - Affiliate Tax Returns</label>
                </value>
                <value>
                    <fullName>875</fullName>
                    <label>T8 - Franchise Documents</label>
                </value>
                <value>
                    <fullName>876</fullName>
                    <label>T8 - Purchase Agreement (Business/Stock/Asset)</label>
                </value>
                <value>
                    <fullName>878</fullName>
                    <label>T8 - Purchase Agreement (Real Estate)</label>
                </value>
                <value>
                    <fullName>900</fullName>
                    <label>T9 - Real Estate Appraisal</label>
                </value>
                <value>
                    <fullName>901</fullName>
                    <label>T9 - Enviromental Investion Report</label>
                </value>
                <value>
                    <fullName>902</fullName>
                    <label>T9 - Lease Agreement</label>
                </value>
                <value>
                    <fullName>903</fullName>
                    <label>T9 - M Appraisal Documents</label>
                </value>
                <value>
                    <fullName>927</fullName>
                    <label>T10 - SBA Form 159 - Fee Disclosure and Compensation Form</label>
                </value>
                <value>
                    <fullName>929</fullName>
                    <label>T10 - CAIVRS Report</label>
                </value>
                <value>
                    <fullName>931</fullName>
                    <label>T10 - Documentation of Lawsuits / Judgements / Bankruptcy</label>
                </value>
                <value>
                    <fullName>933</fullName>
                    <label>T10 - Articles of Organization</label>
                </value>
                <value>
                    <fullName>944</fullName>
                    <label>T10 - Clearance Docs for Non-US Citizens</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocBrCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this optional lookup field to specify a collateral document branch code. This field is mapped to the jXchange field CollatDocBrCode. The default value is blank.</description>
        <inlineHelpText>Enter a Collateral Document Branch Code.</inlineHelpText>
        <label>Collateral Document Branch Code</label>
        <referenceTo>LLC_BI__Branch__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocCode__c</fullName>
        <description>Users populate this optional picklist field to specify a collateral document type code. This field is mapped to the jXchange field CollatDocCode. The default value is blank.</description>
        <inlineHelpText>Select a Collateral Document Type Code.</inlineHelpText>
        <label>Collateral Document Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>Vehicle Title</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>Security Agreement</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>UCC Agreement</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>Deed of Trust</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>Certificate of Deposit</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>Savings Assignment</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>Accounts Receivable Listing</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>Construction Binder</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>Vehicle Insurance</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>Property Insurance</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>Equipment Insurance</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>Assignment of Rents</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>Rental Agreement</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>Rent Roll</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>Title Commitment</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>Title Insurance</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>Balance Sheet</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>Profit and Loss Statement</label>
                </value>
                <value>
                    <fullName>019</fullName>
                    <label>CPA Prepared Financial Stmt</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>Audited Financial Statement</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>Financial Statement</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>Personal Tax Return</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>Business Tax Return</label>
                </value>
                <value>
                    <fullName>024</fullName>
                    <label>Extension of Tax Return</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocDt__c</fullName>
        <description>Users populate this optional date field to specify a collateral document date. This field is mapped to the jXchange field CollatDocDt. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Date.</inlineHelpText>
        <label>Collateral Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocExcDay__c</fullName>
        <description>Users populate this optional text field to specify the collateral document expired number of days. This field is mapped to the jXchange field CollatDocExcDay. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Expired No. of Days.</inlineHelpText>
        <label>Collateral Document Expired No. of Days</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocExcDt__c</fullName>
        <description>Users populate this optional date field to specify a collateral document letter date. This field is mapped to the jXchange field CollatDocExcDt. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Letter Date.</inlineHelpText>
        <label>Collateral Document Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocExcLtrId__c</fullName>
        <description>Users populate this optional text field to specify a collateral document exception letter number. This field is mapped to the jXchange field CollatDocExcLtrId. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Exception Letter Number.</inlineHelpText>
        <label>Collateral Document Exception Letter ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocExcLtrNoSent__c</fullName>
        <description>Users populate this optional text field to specify the collateral document expired letter days. This field is mapped to the jXchange field CollatDocExcLtrNoSent. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Expired Letter Days.</inlineHelpText>
        <label>Collateral Document Expired Letter Days</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocExpDt__c</fullName>
        <description>Users populate this optional date field to specify a collateral document expiration date. This field is mapped to the jXchange field CollatDocExpDt. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Expiration Date.</inlineHelpText>
        <label>Collateral Document Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocLocCode__c</fullName>
        <description>Users populate this optional text field to specify a collateral document filed location. This field is mapped to the jXchange field CollatDocLocCode. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Filed Location.</inlineHelpText>
        <label>Collateral Document Filed Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocOffCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this optional lookup field to specify a collateral document officer code. This field is mapped to the jXchange field CollatDocOffCode. The default value is blank.</description>
        <inlineHelpText>Enter a Collateral Document Officer Code.</inlineHelpText>
        <label>Collateral Document Officer Code</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocPrtRcpt__c</fullName>
        <description>Users populate this optional picklist field to specify a collateral document print receipt letter. This field is mapped to the jXchange field CollatDocPrtRcpt. The default value is blank.</description>
        <inlineHelpText>Select a Collateral Document Print Receipt Letter.</inlineHelpText>
        <label>Collateral Document Print Receipt Letter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocRcptLtrId__c</fullName>
        <description>Users populate this optional text field to specify a collateral document receipt letter number. This field is mapped to the jXchange field CollatDocRcptLtrId. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Receipt Letter Number.</inlineHelpText>
        <label>Collateral Document Receipt Letter ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocRecvDt__c</fullName>
        <description>Users populate this optional date field to specify a collateral document date received. This field is mapped to the jXchange field CollatDocRecvDt. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Date Received.</inlineHelpText>
        <label>Collateral Document Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocStatDt__c</fullName>
        <description>Users populate this optional date field to specify a collateral document status date. This field is mapped to the jXchange field CollatDocStatDt. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Status Date.</inlineHelpText>
        <label>Collateral Document Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocStat__c</fullName>
        <description>Users populate this optional picklist field to specify a collateral document status code. This field is mapped to the jXchange field CollatDocStat. The default value is blank.</description>
        <inlineHelpText>Select a Collateral Document Status Code.</inlineHelpText>
        <label>Collateral Document Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CI</fullName>
                    <label>Collateral Incomplete</label>
                </value>
                <value>
                    <fullName>CO</fullName>
                    <label>Charged Off</label>
                </value>
                <value>
                    <fullName>CR</fullName>
                    <label>Out for Collection or Reissue</label>
                </value>
                <value>
                    <fullName>DC</fullName>
                    <label>Document Complete</label>
                </value>
                <value>
                    <fullName>EX</fullName>
                    <label>Expired</label>
                </value>
                <value>
                    <fullName>FB</fullName>
                    <label>Hold for Future Borrowings</label>
                </value>
                <value>
                    <fullName>FR</fullName>
                    <label>In Foreclusure</label>
                </value>
                <value>
                    <fullName>PO</fullName>
                    <label>Paid Off</label>
                </value>
                <value>
                    <fullName>RL</fullName>
                    <label>Release only upon officer approval</label>
                </value>
                <value>
                    <fullName>SC</fullName>
                    <label>Secures loans in other departments</label>
                </value>
                <value>
                    <fullName>SF</fullName>
                    <label>Held for Safekeeping</label>
                </value>
                <value>
                    <fullName>SP</fullName>
                    <label>Special (Refer to Management)</label>
                </value>
                <value>
                    <fullName>TR</fullName>
                    <label>Collateral on Trust Receipt</label>
                </value>
                <value>
                    <fullName>WV</fullName>
                    <label>Waived</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JHJX__CollatDocWavDt__c</fullName>
        <description>Users populate this optional date field to specify a collateral document waive date. This field is mapped to the jXchange field CollatDocWavDt. The default value is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a Collateral Document Waive Date.</inlineHelpText>
        <label>Collateral Document Waive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Date__c</fullName>
        <description>This field is optional and only used in classic Doc Man. It is a date/time stamp that lists the date/time the document in classic Relationship Document Manager was approved.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>approvalDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Roles__c</fullName>
        <description>This field is optional. It is a semicolon-delimited list of roles that are allowed to approve the document. If left blank, all roles can approve the document. This field is limited to 255 characters in length. This field works in tandem with the newer Placeholder Approval Roles field, which can accept more characters.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approval Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and only used in classic Doc Man. It is a lookup to the user who approved this document in classic Relationship Document Manager.</description>
        <label>approvedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Auto_Esign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. This checkbox, when set to true, can be used to tell a downstream process that this e-signature ready placeholder should automatically appear in Customer Portal once available, rather than requiring a Document Manager user to manually trigger this process.</description>
        <label>Auto E-Sign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Closing_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is automatically populated. It is a lookup to the closing checklist record that was used to create the placeholder record.</description>
        <label>Closing Checklist</label>
        <referenceTo>LLC_BI__ClosingChecklist__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Content_Management_Key__c</fullName>
        <description>During the document preparation process, the system populates this text field with a static value that uniquely identifies the document for content management purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Content Management Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Date__c</fullName>
        <description>This field is optional and can be used to specify a document date. If the placeholder is enabled for Customer Portal, this date will be reflected to the Customer Portal user as a due date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and can be used to specify a document description.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocClass__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional. If this Document Placeholder record was created from a closing checklist, the name of this record auto-populates with the name of the Document Placeholder.</description>
        <label>DocClass</label>
        <referenceTo>LLC_BI__DocClass__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is automatically populated. It is a lookup to which Relationship Document Manager the placeholder is located on. It is applicable to both classic Doc Man and Doc Man.</description>
        <label>DocManager</label>
        <referenceTo>LLC_BI__DocManager__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocTab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and automatically populated. It is only used in classic Doc Man, but is populated for Document Manager as well. It is a lookup to the Tab under which a classic Doc Man placeholder is located.</description>
        <label>DocTab</label>
        <referenceTo>LLC_BI__DocTab__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__DocType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not required, but auto-populates if the placeholder was created from a closing checklist record. This field is equivalent to a category name for groups of placeholder records.</description>
        <label>Category</label>
        <referenceTo>LLC_BI__DocType__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Source__c</fullName>
        <description>The system populates this picklist to define the source of a document in Document Manager. By default, it is blank. This field is not visible to users.</description>
        <inlineHelpText>This system-populated field displays a document’s source.</inlineHelpText>
        <label>Document Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Doc_Prep</fullName>
                    <label>Doc Prep</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Document_Store_Index__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field populates automatically and associates placeholder records and document store records. This is a lookup to the Document Store Index.</description>
        <label>Document Store Index</label>
        <referenceTo>LLC_BI__Document_Store_Index__c</referenceTo>
        <relationshipLabel>Document Placeholders</relationshipLabel>
        <relationshipName>Document_Placeholders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Download_As_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional. It should be marked to true if a compatible file should be downloaded as a PDF.</description>
        <inlineHelpText>Field should be marked to true if a compatible file should be downloaded as a PDF.</inlineHelpText>
        <label>Download As PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Due_Date_Time__c</fullName>
        <description>The system automatically populates this date/time field with the document due date and time. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field automatically displays the document due date and time.</inlineHelpText>
        <label>Due Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__E_Vault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to send the placeholder for e-vault. By default, it is false. This field only displays when the OneSpan or E-Signature plugin is active.</description>
        <inlineHelpText>Select this field to flag the e-vault placeholder as to-send.</inlineHelpText>
        <label>E-Vault Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Date_Time__c</fullName>
        <description>The system automatically populates this optional date/time field with the document exception date and time.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated field automatically displays the document exception date and time.</inlineHelpText>
        <label>Exception Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exception_Date__c</fullName>
        <description>This field is optional and can be used to specify a document exception date. If the exception date is the current date or prior, the document review status will automatically be set to Exception.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Id__c</fullName>
        <description>This field is not required but is automatically populated. It is a reference to the object ID of the record that the Document Placeholder is related to.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_File__c</fullName>
        <description>This field is not required but is automatically populated. The formula returns true if there is a document attached to the placeholder.</description>
        <formula>!ISBLANK(LLC_BI__Document_Store_Index__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required but is automatically populated. If true, the document was imported from another DocManager (for example, from Relationship to Loan).</description>
        <label>Is Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Staged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required but is automatically populated. If true, the placeholder is in File Staging.</description>
        <label>Is Staged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Trash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required but is automatically populated. It is true if the placeholder is in Archive.</description>
        <label>Is Trash</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>